user entity and database connections done

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.3</version>
+		<version>3.3.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.banking.userservice</groupId>
-	<artifactId>user-service</artifactId>
+	<groupId>com.banking</groupId>
+	<artifactId>userservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>User Service</name>
+	<name>user-service</name>
 	<description>user related information &amp; functionalities</description>
 	<url/>
 	<licenses>
@@ -55,7 +55,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <scope>runtime</scope>
+</dependency>
+
 	</dependencies>
+	
 
 	<build>
 		<plugins>
