--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=User Service
+spring.application.name=user-service
+# MySQL database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/banking-system
+spring.datasource.username=root
+spring.datasource.password=amit
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate configuration (optional, but common)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.hikari.maximumPoolSize = 200
