--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8082
+
+# Register with Eureka
 spring.application.name=api-gateway
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Gateway Routes for user-service
+spring.cloud.gateway.routes[0].id=user-service
+spring.cloud.gateway.routes[0].uri=lb://user-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
