--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -21,3 +21,6 @@ eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 
 
+# Swagger Configuration
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
