--- a/transactionservice/src/main/resources/application.properties
+++ b/transactionservice/src/main/resources/application.properties
@@ -19,3 +19,22 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 eureka.instance.prefer-ip-address=true
+
+#kafka confuguration
+
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Consumer Configuration
+spring.kafka.consumer.group-id=notification-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+# Producer Configuration
+spring.kafka.producer.retries=3
+spring.kafka.producer.acks=all
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=notification:com.yourpackage.NotificationEvent
