--- a/reportingservice/src/main/resources/application.properties
+++ b/reportingservice/src/main/resources/application.properties
@@ -1,1 +1,40 @@
 spring.application.name=reporting-service
+# MySQL database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/banking-system
+spring.datasource.username=root
+spring.datasource.password=amit
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate configuration (optional, but common)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+server.port=8085
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+eureka.instance.prefer-ip-address=true
+
+#kafka confuguration
+
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Consumer Configuration
+spring.kafka.consumer.group-id=notification-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+# Producer Configuration
+spring.kafka.producer.retries=3
+spring.kafka.producer.acks=all
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=notification:com.yourpackage.NotificationEvent
