--- a/transactionservice/pom.xml
+++ b/transactionservice/pom.xml
@@ -41,6 +41,11 @@
     <version>2.6.0</version>
 </dependency>
 <dependency>
+    <groupId>com.banking</groupId>
+    <artifactId>model</artifactId>
+    <version>1.0.0</version>
+</dependency>
+<dependency>
     <groupId>org.springframework.kafka</groupId>
     <artifactId>spring-kafka</artifactId>
 </dependency>
