change properties file

--- a/reportingservice/src/main/resources/application.properties
+++ b/reportingservice/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=reporting-service
 # MySQL database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/banking-system
 spring.datasource.username=root
-spring.datasource.password=amit
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate configuration (optional, but common)
@@ -23,10 +23,10 @@ eureka.instance.prefer-ip-address=true
 #kafka confuguration
 
 # mail configuration
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=springboot567@gmail.com
-spring.mail.password=nlxrxecbrfuqutrj
+spring.mail.host=
+#spring.mail.port=
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
