change name from reporting serive to notification service

--- a/notificationservice/pom.xml
+++ b/notificationservice/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.banking</groupId>
-	<artifactId>reportingservice</artifactId>
+	<artifactId>notificationservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>reporting-service</name>
+	<name>notification-service</name>
 	<description>Responsible for sending notification on every transaction</description>
 	<url/>
 	<licenses>
