Revert " deleting the notification service as no need here"
This reverts commit 0c626c7f9d88298ca19037ec5ac85988ac1cefa3.

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>accountservice</module>
         <module>apigateway</module>
         <module>discoveryservice</module>
+        <module>notificationservice</module>
         <module>transactionservice</module>
        <module>userservice</module>
        <module>reportingservice</module>
